# starwars_func_api

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  pyrightconfig.json  pytest.toml  ruff.toml
.github/workflows/: code_quality.yaml
api/v1/routers/: root_router.py  swapi_data_router.py
exceptions/: error_handler.py  errors.py
infra/: redis_client.py  settings.py
models/: api_response.py
repositories/: cache_repository.py
schemas/: query_params_schema.py  root_schema.py  swapi_query_params_schema.py  swapi_resources_schema.py
schemas/examples/: swapi_router_examples.py
services/: auth_service.py  expand_swapi_data_service.py  sort_swapi_data_service.py  swapi_data_service.py
tests/: conftest.py  mock_data.py  test_auth_service.py  test_cache_repository.py  test_get_swapi_data.py  test_request_validator.py  test_root.py  test_swapi_data_expand.py  test_swapi_data_service.py  test_swapi_data_sort.py  test_swapi_schema.py
utils/: cors.py  response.py
validators/: request_validator.py
