[project]
name = "starwars-func-api"
version = "0.1.0"
description = "Function API that wrap SWAPI "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "functions-framework>=3.10.0",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=7.0.0",
  "respx>=0.22.0",
  "ruff>=0.14.14",
  "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
run = { cmd = "functions-framework --target=starwars_func", help = "run API in dev env" }

lint = { cmd = "ruff check", help = "check lint erros" }

pre_format = "ruff check --fix"
format = { cmd = "ruff format", help = "format the code" }

commit = { cmd = "pre-commit run --all-files", help = "runs pre commit" }

type = { cmd = "pyright", help = "runs pyright to check types" }

test = { cmd = "pytest", help = "run all tests" }

cover = { cmd = "coverage report", help = "show code coverage" }
